# tc2017_RAB

./: .gitignore  .rosinstall  .rosinstall.bak  README.md  memo.txt~
YOLOv2/: CocoPredictor.py  person.sh  yolov2.py  yolov2_predict.py  yolov2_prediction_camera_or_video.py  yolov2_prediction_find_person.py  yolov2_prediction_one_image.py
YOLOv2/lib/: image_generator.py~
camera/: multi_camera_recording.py  single_camera_recording.py  video2pics.py
camera_recording/: .#single_camera_recording.py  multi_camera_recording_modified.py  single_camera_recording.py
dataset_processing/: how_many_people.py  increase_dataset.py  increase_person_dataset_11_24.py  increase_person_dataset_1_10.py  overlap.py  overlap2.py  prepare_person_dataset_for_train.py  prepare_person_dataset_for_train_2_class.py  rename.py  resize_dataset.py  save_image_from_video.py  save_person_images.py  show_dataset.py  show_person.py
dataset_processing/test/: cv2_test2.py  cv_test1.py  overlap_test.py  overlap_test_0.py  read_video.py  rename.py  save_image_from_video_.py
icart-mini-src/config/: gmapping.rviz
icart-mini-src/icart_pkg/: CMakeLists.txt  package.xml
icart-mini-src/joy_twist/: CMakeLists.txt  README.md  package.xml
icart-mini-src/joy_twist/config/: robot.yaml  sanwa.yaml
icart-mini-src/joy_twist/launch/: teleop_twist_joy.launch
icart-mini-src/joy_twist/src/: joy_twist_node.cpp
icart-mini-src/param/: red-air-buggy.prm
nda_robot_pkgs/: dependencies.rosinstall
nda_robot_pkgs/nda_robot_bringup/: CMakeLists.txt  package.xml
nda_robot_pkgs/nda_robot_bringup/config/: rviz.rviz
nda_robot_pkgs/nda_robot_bringup/config/joy/: sanwa.yaml  sanwa.yaml~
nda_robot_pkgs/nda_robot_bringup/launch/: 2dmapping_gazebo.launch  lrf_merger.launch
nda_robot_pkgs/nda_robot_bringup/launch/joy/: joy_control.launch
nda_robot_pkgs/nda_robot_control/: package.xml
nda_robot_pkgs/nda_robot_control/config/: controller.yaml
nda_robot_pkgs/nda_robot_control/launch/: nda_robot_control.launch
nda_robot_pkgs/nda_robot_description/: package.xml
nda_robot_pkgs/nda_robot_gazebo/: CMakeLists.txt
nishidalab_ypspur_driver/config/: nishidalab_ypspur_starter.sh  red-air-buggy.prm  red-air-buggy.prm~  red-armored-buggy.prm
nishidalab_ypspur_driver/launch/: nishidalab_ypspur.launch  nishidalab_ypspur_driver.launch
nishidalab_ypspur_driver/src/: nishidalab_ypspur_odom_publisher_node.cpp
person_classifier/: .#load_dataset_.py  learner.py  learner_hdd.py  load_dataset.py  network_structure.py  separate_dataset.py
person_classifier/data1/: labels.txt  test_x.txt  test_y.txt  train_validation_y.txt
person_classifier_2_class/: learner.py  load_dataset.py  load_dataset_.py  loader.py  loader_with_threshold.py  network_structure.py  separate_dataset.py  visualizer.py
person_classifier_3_class/: learner.py  visualizer.py
rab_utility_pkg/: CMakeLists.txt  package.xml
rab_utility_pkg/config/: amcl_sim.rviz  hokuyo_3d.rviz  merge.rviz  nav.rviz
rab_utility_pkg/launch/: 3d_sensor.launch  3durg.launch  joy_teleop.launch  multi_urg_merge.launch  single_urg_merge.launch  urg_merge.launch  web_camera.launch
rab_utility_pkg/src/: 1st_search_waypoint.cpp  1st_search_wp.cpp  2nd_search_wp.cpp  3d_search.cpp  4th_waypoint.cpp  lotteria2search_wp.cpp  my_joystick.cpp  park2search_waypoint.cpp  park_waypoint.cpp  park_wp.cpp  pedestrian_signal2goal_wp.cpp  search2lotteria_waypoint.cpp  (+4 more)
recognition/: PersonClassifier.py  loader.py  person_classifier.py  test.sh  visualizer.py  yolov2_with_person_recognition.py  yolov2_with_person_recognition_th.py
recognition_on_cpu/: network_structure.py  yolov2.py
tc2017_RAB_src/: README.md
tc2017_RAB_src/nda_robot_pkgs/nda_robot_pkgs/: CMakeLists.txt  package.xml
(+105 files in other folders)
