<?xml version="1.0"?>
<package>
  <name>joy_twist</name>
  <version>1.0.0</version>
  <description>The joy_twist package</description>

  <maintainer email="GRoadPG@gmail.com">RyodoTanaka</maintainer>
  <author>Ryodo Tanaka</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>joy</run_depend>

</package>
