<?xml version="1.0"?>
<package>
  <name>nda_robot_bringup</name>
  <version>0.0.0</version>
  <description>The nda_robot_bringup package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <author email="groadpg@gmail.com">RyodoTanaka</author>

  <license>TODO</license>

  <url type="repository">https://github.com/Nishida-Lab/nda_robot_pkgs.git</url>
  <url type="bugtracker">https://github.com/Nishida-Lab/nda_robot_pkgs/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>joy_twist</run_depend>
  <run_depend>ira_laser_tools</run_depend>
  <run_depend>urg_node</run_depend>

</package>
