<?xml version="1.0"?>
<package>
  <name>nda_robot_control</name>
  <version>0.0.0</version>
  <description>The nda_robot_control package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <author email="groadpg@gmail.com">RyodoTanaka</author>

  <license>TODO</license>
  
  <url type="repository">https://github.com/Nishida-Lab/nda_robot_pkgs.git</url>
  <url type="bugtracker">https://github.com/Nishida-Lab/nda_robot_pkgs/issues</url>

  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>gazebo_ros_control</run_depend>

</package>
