<?xml version="1.0"?>
<package>
  <name>nda_robot_pkgs</name>
  <version>0.0.0</version>
  <description>The nda_robot_pkgs package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <author email="groadpg@gmail.com">RyodoTanaka</author>

  <license>TODO</license>

  <url type="repository">https://github.com/Nishida-Lab/nda_robot_pkgs.git</url>
  <url type="bugtracker">https://github.com/Nishida-Lab/nda_robot_pkgs/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>nda_robot_2dnav</run_depend>
  <run_depend>nda_robot_bringup</run_depend>
  <run_depend>nda_robot_control</run_depend>
  <run_depend>nda_robot_description</run_depend>
  <run_depend>nda_robot_gazebo</run_depend>

  <export>
    <metapackage />
</export>

</package>
